<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SensorActivity"
    android:background="@color/backgroundColorDark">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16sp"
        android:text="@string/gestorSensor"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/textColorLight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/sensores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/snsorNombre"
        android:layout_margin="8dp"
        android:padding="16sp"
        android:inputType="text"
        android:textColor="@color/textColorLight"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/modeloSensorEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/ModeloSensor"
        android:inputType="text"
        android:textColor="@color/textColorLight"
        android:background="@drawable/edittext_background"
        android:padding="16sp"
        app:layout_constraintTop_toBottomOf="@id/sensores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/campoIdealEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/valorIdeal"
        android:inputType="number"
        android:textColor="@color/textColorLight"
        android:background="@drawable/edittext_background"
        android:padding="16sp"
        app:layout_constraintTop_toBottomOf="@id/modeloSensorEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/UbiSensor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/edittext_background"
        android:padding="16sp"
        app:layout_constraintTop_toBottomOf="@id/campoIdealEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/SpinnerSensor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/edittext_background"
        android:padding="16sp"
        app:layout_constraintTop_toBottomOf="@id/UbiSensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ingresarSensorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/buttonColorGreen"
        android:textColor="@color/buttonTextColorDark"
        android:padding="16sp"
        android:text="@string/Ingresar"
        app:layout_constraintTop_toBottomOf="@id/SpinnerSensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ModificarSensorButton" />

    <Button
        android:id="@+id/ModificarSensorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/buttonColorGreen"
        android:textColor="@color/buttonTextColorDark"
        android:padding="16sp"
        android:text="@string/modificar"
        app:layout_constraintTop_toBottomOf="@id/SpinnerSensor"
        app:layout_constraintStart_toEndOf="@id/ingresarSensorButton"
        app:layout_constraintEnd_toStartOf="@id/eliminarSensorButton" />

    <Button
        android:id="@+id/eliminarSensorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/buttonColorGreen"
        android:textColor="@color/buttonTextColorDark"
        android:padding="16sp"
        android:text="@string/eliminar"
        app:layout_constraintTop_toBottomOf="@id/SpinnerSensor"
        app:layout_constraintStart_toEndOf="@id/ModificarSensorButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buscarSensorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="10sp"
        android:text="@string/buscar"
        android:backgroundTint="@color/buttonColorGreen"
        android:textColor="@color/buttonTextColorDark"
        app:layout_constraintTop_toBottomOf="@id/eliminarSensorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verSensoresButton" />

    <Button
        android:id="@+id/verSensoresButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="10sp"
        android:text="@string/verSensores"
        android:backgroundTint="@color/buttonColorGreen"
        android:textColor="@color/buttonTextColorDark"
        app:layout_constraintTop_toBottomOf="@id/eliminarSensorButton"
        app:layout_constraintStart_toEndOf="@id/buscarSensorButton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



