<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColorDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msj_1"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/textColorLight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/gestorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/opc_sensores"
        android:textColor="@color/buttonTextColorDark"
        android:backgroundTint="@color/buttonColorGreen"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/gestorUbiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/gestor_ubi"
        android:textColor="@color/buttonTextColorDark"
        android:backgroundTint="@color/buttonColorGreen"
        app:layout_constraintTop_toBottomOf="@+id/gestorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/verRegistrosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/registros"
        android:textColor="@color/buttonTextColorDark"
        android:backgroundTint="@color/buttonColorGreen"
        app:layout_constraintTop_toBottomOf="@+id/gestorUbiButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

