<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColorDark"
    tools:context=".gestor_ubi">

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16sp"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/textColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UbiSensor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/UbiIngreso"
        android:inputType="text"
        android:padding="16sp"
        android:textColor="@color/textColorLight"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/titulo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/descripc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16sp"
        android:hint="@string/descripSensor"
        android:inputType="text"
        android:textSize="16sp"
        android:textColor="@color/textColorLight"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/UbiSensor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ingresarUbiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingreso2"
        android:textColor="@color/buttonTextColorDark"
        android:layout_margin="8dp"
        android:padding="16sp"
        android:backgroundTint="@color/buttonColorGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripc" />

    <!-- RecyclerView para mostrar la lista de ubicaciones -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUbicaciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ingresarUbiButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

